dynamix/force-app/main/default/objects/Invoice__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>