dynamix/force-app/main/default/objects/Invoice__c/fields/Co_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Applicant</label>
    <referenceTo>Co_Applicant__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>