dynamix/force-app/main/default/objects/Invoice__c/fields/Credit_s_Received__c.field-meta.xml
<CustomField>
    <fullName>Credit_s_Received__c</fullName>
    <formula>Amount_Credit_Note__c +  GST_Credit_Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit&apos;s Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>