dynamix/force-app/main/default/objects/Invoice__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <formula>TEXT(Demand__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Status</label>
    <type>Text</type>
</CustomField>