dynamix/force-app/main/default/objects/Invoice__c/fields/Gst__c.field-meta.xml
<CustomField>
    <fullName>Gst__c</fullName>
    <label>GST</label>
    <summarizedField>Invoice_Line_Item__c.GST__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>