dynamix/force-app/main/default/objects/Invoice__c/fields/GST_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>GST_Credit_Note__c</fullName>
    <label>GST (Credit Note)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>