dynamix/force-app/main/default/objects/Invoice__c/fields/GST_Received__c.field-meta.xml
<CustomField>
    <fullName>GST_Received__c</fullName>
    <label>GST Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>