dynamix/force-app/main/default/objects/Invoice__c/fields/Invoice_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Code__c</fullName>
    <label>Invoice Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>