dynamix/force-app/main/default/objects/Invoice__c/fields/Line_Item_Created__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Item Created</label>
    <type>Checkbox</type>
</CustomField>