dynamix/force-app/main/default/objects/Invoice__c/fields/Pending_GST__c.field-meta.xml
<CustomField>
    <fullName>Pending_GST__c</fullName>
    <formula>Gst__c - ( GST_Received__c + GST_Credit_Note__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>