dynamix/force-app/main/default/objects/Invoice__c/fields/Total_Amount_Incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_GST__c</fullName>
    <formula>Amount__c +  Gst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Incl. GST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>