dynamix/force-app/main/default/objects/Invoice__c/fields/Total_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received__c</fullName>
    <formula>Amount_Received__c + GST_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>